literature repostiory interface